# claif_knollm

./: .gitignore  PLAN.md  README.md  TODO.md  pyproject.toml
.github/workflows/: push.yml  release.yml
docs/: 404.html  index.html  objects.inv  sitemap.xml
docs/api/: index.html
docs/getting-started/: index.html
docs/getting-started/configuration/: index.html
docs/getting-started/installation/: index.html
docs/getting-started/quickstart/: index.html
docs/guides/: index.html
docs/libraries/: index.html
docs/models/: index.html
docs/providers/: index.html
docs/search/: search_index.json
src/claif_knollm/: __init__.py  cli.py  client.py  data_loader.py  models.py  registry.py
src_docs/: mkdocs.yml
src_docs/md/: index.md
src_docs/md/api/: index.md
src_docs/md/getting-started/: configuration.md  index.md  installation.md  quickstart.md
src_docs/md/guides/: index.md
src_docs/md/libraries/: index.md
src_docs/md/models/: index.md
src_docs/md/providers/: index.md
tests/: test_basic_functionality.py  test_package.py
